--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </label>
             
             <ul class="liContainer">
-                <li class="logoContainer"><a href="index.html"><img src="https://www.citypng.com/public/uploads/small/116619927023juikrzlcizexcpzab9vrrr3kgycqutkc6cmu4otj8w3hlzivgefjkox068avt6hbhzjz2evln1myzw3vbisumajykdxw1lhd8bn.png" alt="logo harry potter" class="logo"></a></li>
+                <li class="logoContainer"><a href="#"><img src="https://www.citypng.com/public/uploads/small/116619927023juikrzlcizexcpzab9vrrr3kgycqutkc6cmu4otj8w3hlzivgefjkox068avt6hbhzjz2evln1myzw3vbisumajykdxw1lhd8bn.png" alt="logo harry potter" class="logo"></a></li>
                 <li><a href="./index.html">Inicio</a></li>
                 <li><a href="./page/peliculas.html">Peliculas</a></li>
                 <li><a href="./page/casas.html">Casas</a></li>
