--- a/index.html
+++ b/index.html
@@ -39,27 +39,26 @@
     <main>
         <section>
             <h1 class="tituloHP">¿Qué es Harry Potter?</h1>
-            <article class="cardContainer">
-                <div class="card">
-                    <img class="imgPrincipal"src="https://cloudfront-us-east-1.images.arcpublishing.com/gruponacion/2C3XTDTCEFE3VH52AQ3B2RXPAQ.jpg" alt="imagen harry potter">
-                    <p class="textHarry">Harry Potter es una serie de novelas fantásticas escrita por la autora británica J. K. Rowling, en la que se describen las aventuras del joven aprendiz de magia y hechicería Harry Potter y sus amigos Hermione Granger y Ron Weasley, durante los años que pasan en el Colegio Hogwarts de Magia y Hechicería. El argumento se centra en la lucha entre Harry Potter y el malvado mago lord Voldemort, quien asesinó a los padres de Harry en su afán de conquistar el mundo mágico.</p>
-                </div>
-            </article>
+                <article class="cardContainer">
+                    <div class="card">
+                        <img class="imgPrincipal"src="https://cloudfront-us-east-1.images.arcpublishing.com/gruponacion/2C3XTDTCEFE3VH52AQ3B2RXPAQ.jpg" alt="imagen harry potter">
+                        <p class="textHarry">Harry Potter es una serie de novelas fantásticas escrita por la autora británica J. K. Rowling, en la que se describen las aventuras del joven aprendiz de magia y hechicería Harry Potter y sus compañeros.</p>
+                    </div>
+                </article>
+            </div>
         </section>
     
 
         <section>
             <div class="imgPortadas">
-                <!-- <a href=""></a><img src="/img/harrypotter1.jpg" alt="portada harry potter 1"> -->
-                
-                <img src="./img/harrypotter1.jpg" alt="portada harry potter 1">
-                <img src="./img/harrypotter2.jpg" alt="portada harry potter 2">
-                <img src="./img/harrypotter3.jpg" alt="portada harry potter 3">
-                <img src="./img/harrypotter4.jpg" alt="portada harry potter 4">
-                <img src="./img/harrypotter5.jpg" alt="portada harry potter 5">
-                <img src="./img/harrypotter6.jpg" alt="portada harry potter 6">
-                <img src="./img/harrypotter7part1.jpg" alt="portada harry potter 7 parte 1">
-                <img src="./img/harrypotter7part2.jpg" alt="portada harry potter 7 parte 2">
+                    <img src="/img/harrypotter1.jpg" alt="portada harry potter 1">
+                    <img src="./img/harrypotter2.jpg" alt="portada harry potter 2">
+                    <img src="./img/harrypotter3.jpg" alt="portada harry potter 3">
+                    <img src="./img/harrypotter4.jpg" alt="portada harry potter 4">
+                    <img src="./img/harrypotter5.jpg" alt="portada harry potter 5">
+                    <img src="./img/harrypotter6.jpg" alt="portada harry potter 6">
+                    <img src="./img/harrypotter7part1.jpg" alt="portada harry potter 7 parte 1">
+                    <img src="./img/harrypotter7part2.jpg" alt="portada harry potter 7 parte 2">
             </div>
         </section>
     </main>
