--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <section>
             <div class="imgPortadas">
-                    <img src="/img/harrypotter1.jpg" alt="portada harry potter 1">
+                    <img src="./img/harrypotter1.jpg" alt="portada harry potter 1">
                     <img src="./img/harrypotter2.jpg" alt="portada harry potter 2">
                     <img src="./img/harrypotter3.jpg" alt="portada harry potter 3">
                     <img src="./img/harrypotter4.jpg" alt="portada harry potter 4">
